# image_stitcher

./: .gitignore  CHANGELOG.md  README.md  image_stitcher.py  manual.md  pyproject.toml  resources_rc.py  resources_rc.qrc
QT_file/: AboutWindow.ui  CheckWindow.ui  MainWindow.ui  ManualWindow.ui
app/: AboutUI.py  CustomWidgets.py  MainUI.py  ManualUI.py  controller.py
